@@ -1,3 +1,11 @@
+Mon Mar 21 20:18:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* common.mk (TEST_EXCLUDES, EXCLUDE_TESTFRAMEWORK): use full spell
+	  long option.
+
+	* cygwin/GNUmakefile.in (MSYS2_ARG_CONV_EXCL): suppress path name
+	  conversions by msys2.  [ruby-dev:49525] [Bug #12199]
+
 Mon Mar 21 19:09:31 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* string.c (enc_succ_alnum_char): try to skip an invalid character
